fix for popup styles - backdrop z-index, etc.

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -21,7 +21,6 @@
 @import 'partials/fonts';
 
 .container {
-  z-index: 10;
   font-size: 1.125rem;
   @include mobile {
     font-size: 1.3rem;
